--- a/styles.css
+++ b/styles.css
@@ -28,7 +28,7 @@
     float: right;
     width: 40px;
     text-align: right;
-    background: url("pictures/menu/filters/filter.png");
+    background: url("pictures/filters/filter.png");
     background-size: 40px;
 }
 
@@ -37,7 +37,7 @@
     /*margin: 5px 5px 5px 80%;*/
     width: 40px;
     text-align: right;
-    background: url("pictures/menu/filters/filterAnim.png");
+    background: url("pictures/filters/filterAnim.png");
     background-size: 40px;
     text-align: right;
     color: #e3bd8c;
@@ -196,7 +196,8 @@ body{
 
 .posts{
     float:left;
-    margin: 5px 5px 5px 13%;
+    position: center;
+    margin: 5px 5px 5px 25%;
 }
 
 .photoPost{
@@ -220,7 +221,7 @@ body{
 
 .avaPost{
     width: 50px;
-    float: left;
+    float: right;
 }
 
 .postUser{
@@ -241,15 +242,26 @@ body{
     width: 30px;
     height: 30px;
     margin: 0px 5px 0px 0px;
-    float: left;
+    float: right;
+    background: url(pictures/NotPressed.png);
+    background-size: 30px;
+}
+
+.likePostUnAuth{
+    width: 30px;
+    height: 30px;
+    margin: 0px 5px 0px 0px;
+    float: right;
+    background: url(pictures/NotPressed.png);
+    background-size: 30px;
 }
 
 .likePost:active {
     width: 30px;
     height: 30px;
     margin: 0px 5px 0px 0px;
-    float: left;
-    background: url(pictures/post/like.png);
+    float: right;
+    background: url(pictures/like.png);
     background-size: 30px;
 
 }
@@ -260,7 +272,7 @@ body{
     font-style: normal;
     font-size: 15px;
     margin: 5px 5px 5px 0px;
-    float: left;
+    float: right;
 }
 
 .textComment{
@@ -311,9 +323,9 @@ footer{
         font-size: 15px;
     }
     .menu-block-add {
-        float: left;
+        float: right;
         width: 2vw;
-        padding: 0  0 0 15px;
+        padding: 0 0 0 15px;
         max-width: 5vw;
         max-height: 5vh;
     }
@@ -358,3 +370,4 @@ footer{
     }
 
 }
+
