--- a/styles.css
+++ b/styles.css
@@ -10,364 +10,592 @@
     font-style: normal;
 }
 
-
-.logoImg{
-    margin: -0.1% 5%;
-    height: 30px;
+.logoImg {
+    height: 10vh;
 }
 
-.filter-blocks{
+.addingHashtags {
+    font-family: Stolzl-Thin;
+    vertical-align: middle;
+    border: 1px solid #cecece;
+    background: #F6F6f6;
+    border-radius: 8px;
+    width: 30%;
+    height: 5%;
+}
+
+.filter-blocks {
     float: left;
     font-family: Stolzl-Thin;
     vertical-align: middle;
-/*    margin: 5px 50px 0px 50px;*/
-    margin: 0.5% 5%;
+    margin: 5px;
 }
 
-.filters-picture{
+.filters-picture {
     float: right;
-    width: 40px;
+    height: 10vh;
+    width: 50px;
     text-align: right;
     background: url("pictures/filters/filter.png");
-    background-size: 40px;
+    background-size: 50px;
 }
 
-.filters-picture:active{
+.filters-picture:active {
     float: right;
-    /*margin: 5px 5px 5px 80%;*/
-    width: 40px;
+    width: 50px;
     text-align: right;
     background: url("pictures/filters/filterAnim.png");
-    background-size: 40px;
+    background-size: 50px;
     text-align: right;
     color: #e3bd8c;
 }
 
-.filter-input{
+.filter-input {
     color: #e3bd8c;
-    max-height: 15vh;
+    max-height: 10vh;
     max-width: 40vw;
-    border-radius: 3px; //закругление углов (общее)
--webkit-border-radius: 3px; //закругление углов (Google Chrome)
--moz-border-radius: 3px; //закругление углов (FireFox)
--khtml-border-radius: 3px; //закругление углов (Safari)
+    border-radius: 3px;
 }
 
 .filter-input:focus {
     color: #e3bd8c;
-    max-height: 15vh;
+    max-height: 10vh;
     max-width: 10vm;
+    border-radius: 3px;
     border: 1px solid #e3bd8c;
 }
 
-.filters-text{
+.filters-text {
     text-align: left;
     vertical-align: middle;
     font-family: Stolzl-Thin, Century Gothic, Georgia;
     paddging: auto;
 }
-.filters{
+
+.filters {
+    height: 10vh;
+    max-height: 15vh;
+}
+
+.filters-picture {
     height: 50px;
-    max-height: 15vh;
 }
 
-.filters-picture{
-    height: 40px;
-}
-
-.menu-picture{
+.menu-picture {
+    margin: 5px;
     max-height: 15vh;
-    height: 30px;
+    height: 50px;
     max-width: 15vw;
     max-height: 15vh;
 }
 
-.menu-block-picture{
-    float:right;
-    margin: -5px 10px 0 15px;
-    text-align: center;
-    height: 25px;
+.menu-block-picture {
+    float: left;
+    margin: 5px;
+    height: 50px;
     max-height: 15vh;
-    line-height: 10px;
 }
-/*label {float: right;}*/
 
 .menu-picture:active {
-    margin: 5px 0 0 0 ;
-    height: 30px;
-    max-width: 15vw;
-    max-height: 15vh;
-
-}
-
-.menu-block-add{
-    float:right;
-    width:15vw;
-    padding: 5px 37% 10px 0;
-    max-width: 15vw;
-    max-height: 15vh;
-
-}
-
-.menu-picture-margin{
-    height: 30px;
-    max-width: 30vw;
-    -webkit-transition-duration: 0.8s;
-    -moz-transition-duration: 0.8s;
-    -o-transition-duration: 0.8s;
-    transition-duration: 0.8s;
-    -webkit-transition-property: -webkit-transform;
-    -moz-transition-property: -moz-transform;
-    -o-transition-property: -o-transform;
-    transition-property: transform;
-}
-.menu-picture-margin:hover{
-    -moz-transform: rotate(360deg);
-    -webkit-transform: rotate(360deg);
-    -o-transform: rotate(360deg);
-    -ms-transform: rotate(360deg);
-    transform: rotate(360deg);
-}
-
-.name-of-user{
-    float:right;
-    margin: 6px 10px 0 15px;
-    height: 25px;
-    max-height: 15vh;
-    line-height: 10px;
-}
-
-.menu-picture-margin-add{
+    margin: 5px;
     height: 40px;
-    max-width: 25vw;
-    -webkit-transition-duration: 0.8s;
-    -moz-transition-duration: 0.8s;
-    -o-transition-duration: 0.8s;
-    transition-duration: 0.8s;
-    -webkit-transition-property: -webkit-transform;
-    -moz-transition-property: -moz-transform;
-    -o-transition-property: -o-transform;
-    transition-property: transform;
+    max-width: 15vw;
+    max-height: 15vh;
+
 }
-.menu-picture-margin-add:hover{
-    -moz-transform: rotate(360deg);
-    -webkit-transform: rotate(360deg);
-    -o-transform: rotate(360deg);
-    -ms-transform: rotate(360deg);
+
+.menu-block-add {
+    float: right;
+    width: 15vw;
+    padding: 5px 30vw 10px 40px;
+    max-width: 15vw;
+    max-height: 15vh;
+
+}
+
+.menu-block-avatar {
+    border-radius: 100px;
+    float: right;
+    max-width: 15vw;
+    height: 50px;
+    padding: 5px 5vw 0vw 0px;
+    max-width: 15vw;
+    max-height: 15vh;
+
+}
+
+.menu-picture-margin {
+    height: 50px;
+    max-width: 40px;
+    transition-duration: 0.8s;
+    transition-property: transform;
+    border-radius: 100px;
+}
+
+.menu-picture-margin:hover {
     transform: rotate(360deg);
 }
 
-.menu{
+.menu {
     clear: both;
-    height: 50px;
+    height: 60px;
     border-top-color: #e3bd8c;
     border-top-style: solid;
     border-top-width: 1px;
 }
 
-
-
-body{
+body {
     font-family: Stolzl-Thin, Century Gothic, Georgia;
-    height: 80vh;
+    height: 94vh;
+    /*min-width: 556px;*/
 }
 
 .scroll-block {
     clear: both;
-    height: 78.5vh;
+    height: 63vh;
     max-height: 250vw;
     overflow-y: scroll;
     text-align: center;
 }
 
-.downloadYet{
-    clear:both;
+.downloadMore {
+    clear: both;
     text-align: center;
-    height: 70px;
+    height: 100px;
 }
 
-.downloadYet:active{
-    margin: 3px 0 0 0;
-    clear:both;
+.downloadMore:active {
+    clear: both;
     text-align: center;
-    height: 70px;
+    height: 105px;
 }
 
-
-.posts{
-    float:left;
-    position: center;
-    margin: 5px 5px 5px 25%;
+.post {
+    float: left;
+    margin: 5px 5px 5px 5%;
 }
 
-.photoPost{
-    width: 440px;
-    height: 440px;
-    clear:both;
+.photoPost {
+    width: 250px;
+    height: 250px;
+    clear: both;
 }
 
-.editPost{
-    margin: 0 0 0 0;
+.editPost {
+    margin: 0;
     width: 30px;
     float: right;
 }
 
-.editPost:active{
-    margin: 3px 0 0 0;
+.deletePost{
+    margin: 0;
     width: 30px;
     float: right;
 }
 
+.editPost:active {
+    margin: 0;
+    width: 28px;
+    float: right;
+}
 
-.avaPost{
+.deletePost:active {
+    margin: 0;
+    width: 28px;
+    float: right;
+}
+
+.avaPost {
+    border-radius: 100px;
     width: 50px;
-    float: right;
+    float: left;
 }
 
-.postUser{
+.postUser {
     font-family: Stolzl-Thin, Century Gothic, Georgia;
     color: black;
     font-size: 15px;
     margin: 0px 5px
 }
 
-.dataUser{
+.dataUser {
     font-family: Stolzl-Thin, Century Gothic, Georgia;
     color: gray;
     font-size: 15px;
+    text-indent: 20px;
     margin: 0px 5px
 }
 
-.likePost{
+.likePost {
     width: 30px;
     height: 30px;
     margin: 0px 5px 0px 0px;
-    float: right;
-    background: url(pictures/NotPressed.png);
-    background-size: 30px;
+    float: left;
 }
 
-.likePostUnAuth{
-    width: 30px;
-    height: 30px;
-    margin: 0px 5px 0px 0px;
-    float: right;
-    background: url(pictures/NotPressed.png);
-    background-size: 30px;
+.inpDivAuth {
+    margin-top: 10px;
 }
 
-.likePost:active {
-    width: 30px;
-    height: 30px;
-    margin: 0px 5px 0px 0px;
-    float: right;
-    background: url(pictures/like.png);
-    background-size: 30px;
+.main {
+    top: 0px;
+    bottom: 0px;
+    right: 0px;
+    left: 0px;
+    z-index: 90;
+}
+
+#error{
+    margin-left: 30vw;
+    margin-top: 5vh;
+    background-color: white;
+    width: 50vw;
+    max-width: 360px;
+    height: 30vh;
+    position: fixed;
+    text-align: center;
+    display: none;
+    z-index: 200;
+    border: 1px solid #E3BD8C;
+    border-radius: 8px;
+}
+
+.formAuthorization {
+    margin-left: 30vw;
+    margin-top: 5vh;
+    background-color: white;
+    width: 50vw;
+    max-width: 360px;
+    height: 80vh;
+    position: fixed;
+    text-align: center;
+    display: none;
+    z-index: 150;
+    border: 1px solid #E3BD8C;
+    border-radius: 8px;
+}
+
+.authLogo {
+    width: 15vw;
+    max-width: 110px;
+}
+
+.pAuth {
+    font-size: 20px;
 
 }
 
-.textLike{
+.enterBtn {
+    width: 43vw;
+    max-width: 300px;
+    margin-top: 10px;
+    height: 8vh;
+    font-size: 20px;
+    color: #c09f76;
     font-family: Stolzl-Thin, Century Gothic, Georgia;
-    color: #aa9579;
-    font-style: normal;
+    padding: 6px 0 4px 10px;
+    border: 1px solid #E3BD8C;
+    background: #FFFFFF;
+    border-radius: 8px;
+}
+
+#textError{
+    font-family: Stolzl-Thin, Century Gothic, Georgia;
+}
+
+#addPhotoDrop{
+    border: 2px dashed #ccc;
+    margin-left: 5%;
+    margin-top: 2%;
+    border-radius: 20px;
+    width: 90%;
+    height: 220px;
+    font-family: Stolzl-Thin, Century Gothic, Georgia;
+}
+
+#editPhotoDrop{
+    border: 2px dashed #ccc;
+    margin-left: 5%;
+    margin-top: 2%;
+    border-radius: 20px;
+    width: 90%;
+    height: 220px;
+    font-family: Stolzl-Thin, Century Gothic, Georgia;
+}
+
+#addPhotoDrop.highlight{
+    border-color: purple;
+}
+
+
+#gallery {
+      margin-top: 10px;
+}
+
+#galleryEdit {
+    margin-top: 10px;
+}
+
+#galleryEdit img {
+     width: 200px;
+     max-height: 130px;
+     margin-bottom: 10px;
+     margin-right: 10px;
+     vertical-align: middle;
+ }
+
+#gallery img {
+    width: 200px;
+    max-height: 130px;
+    margin-bottom: 10px;
+    margin-right: 10px;
+    vertical-align: middle;
+}
+
+#fileElem {
+    display: none;
+}
+
+/*#loaderFileStand{*/
+    /*font-family: Stolzl-Thin, Century Gothic, Georgia;*/
+    /*margin-bottom: 2%;*/
+/*}*/
+
+.formForFile {
+    background: #E3BD8C;
+    color: #FFFFFF;
+    border-radius: 18px;
+    border: 1px solid #E3BD8C;
+    margin-top: 10%;
+    margin-left: 10%;
+    width: 80%;
+    height: 300px;
+}
+
+.descriptionAdding {
+    margin-top: 10px;
+}
+
+.editFormPost{
+    margin-left: 30vw;
+    margin-top: 5vh;
+    background-color: white;
+    width: 50vw;
+    max-width: 360px;
+    height: 80vh;
+    position: fixed;
+    text-align: center;
+    display: none;
+    z-index: 150;
+    border: 1px solid #E3BD8C;
+    border-radius: 8px;
+}
+
+.formAddingPost {
+    margin-left: 30vw;
+    margin-top: 5vh;
+    background-color: white;
+    width: 50vw;
+    max-width: 360px;
+    height: 80vh;
+    position: fixed;
+    text-align: center;
+    display: none;
+    z-index: 150;
+    border: 1px solid #E3BD8C;
+    border-radius: 8px;
+}
+
+.inputAuth {
+    width: 40vw;
+    max-width: 300px;
+    height: 5vh;
+    font-size: 13px;
+    font-family: Stolzl-Thin, Century Gothic, Georgia;
+    padding: 6px 0 4px 10px;
+    border: 1px solid #cecece;
+    background: #F6F6f6;
+    border-radius: 8px;
+}
+
+.inputAddingDescr {
+    width: 50%;
+    max-width: 300px;
+    height: 5%;
+    font-size: 13px;
+    font-family: Stolzl-Thin, Century Gothic, Georgia;
+    padding: 6px 0 4px 10px;
+    border: 1px solid #cecece;
+    background: #F6F6f6;
+    border-radius: 8px;
+    margin-top: 10px;
+}
+
+.inputAddingHashtags {
+    width: 30%;
+    max-width: 300px;
+    height: 5%;
+    font-size: 13px;
+    font-family: Stolzl-Thin, Century Gothic, Georgia;
+    padding: 6px 0 4px 10px;
+    border: 1px solid #cecece;
+    background: #F6F6f6;
+    border-radius: 8px;
+    margin-top: 10px;
+}
+
+.authInputes {
+    margin-top: 20vh;
+}
+
+.likePostUnAuth {
+    width: 30px;
+    height: 30px;
+    margin: 0px 5px 0px 0px;
+    float: left;
+}
+
+.grayBackground {
+    position: fixed;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    top: 0;
+    display: none;
+    z-index: 100;
+    background-color: rgba(1, 1, 1, 0.75);
+}
+
+.textLike {
+    font-family: Stolzl-Thin, Century Gothic, Georgia;
+    color: #e3bd8c;
     font-size: 15px;
     margin: 5px 5px 5px 0px;
-    float: right;
+    float: left;
 }
 
-.textComment{
+.textComment {
     font-family: Stolzl-Thin, Century Gothic, Georgia;
     color: black;
     font-size: 15px;
     margin: 5px 5px 5px 10px;
 }
 
-.textHashTag{
+.textHashTag {
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    max-width: 250px;
+    overflow: hidden;
     font-family: Stolzl-Thin, Century Gothic, Georgia;
     color: gray;
     font-size: 15px;
     clear: left;
-    /*margin: 5px 5px 5px 10px;*/
 }
 
-header{
+header {
     border-bottom-style: solid;
     border-bottom-width: 1px;
     border-bottom-color: #e3bd8c;
-    text-align: start;
-    height: 30px;
+    text-align: center;
+    height: 10vh;
 }
 
-footer{
-    border-top-style: solid;
-    border-top-width: 1px;
-    border-top-color: #e3bd8c;
+footer {
     clear: both;
-    background: rgba(227, 189, 140, 0);
+    background: #e3bd8c;
     font-family: Stolzl-Thin, Century Gothic, Georgia;
     text-align: center;
-    font-size: 13px;
-    height: 20px;
+    height: 6vh;
     position: absolute;
     margin-bottom: 0px;
-    width: 98%;
+    width: 100%;
 }
+
+@media screen and (max-width: 1044px) {
+    .posts {
+        clear: both;
+        height: 60vh;
+        overflow-y: scroll;
+        text-align: center;
+    }
+
+    footer {
+        clear: both;
+        background: #e3bd8c;
+        font-family: Stolzl-Thin, Century Gothic, Georgia;
+        text-align: center;
+        font-size: 10px;
+        height: 7vh;
+        position: absolute;
+        margin-bottom: 0px;
+        width: 100%;
+    }
+}
+
 @media screen and (max-width: 540px) {
 
-    .filter-blocks{
-        float:left;
+    .filter-blocks {
+        float: left;
         font-family: Stolzl-Thin;
         vertical-align: middle;
         max-width: 40px;
-        margin: 5px 5px 5px 5px;
+        margin: 5px;
         font-size: 15px;
     }
+
     .menu-block-add {
-        float: right;
+        float: left;
         width: 2vw;
         padding: 0 0 0 15px;
         max-width: 5vw;
         max-height: 5vh;
     }
 
-    .menu-block-avatar{
-        float:right;
+    .menu-block-avatar {
+        float: right;
         width: 10vw;
         max-height: 15vh;
-
     }
 
-    .menu-block-picture{
-        float:left;
+    .menu-block-picture {
+        float: left;
         max-height: 10vh;
         max-width: 10vw;
     }
 
     .menu-picture:active {
-        height: 20px;
+        height: 40px;
         max-width: 10vw;
         max-height: 10vh;
-
     }
-    footer{
+
+    footer {
         clear: both;
         background: #e3bd8c;
         font-family: Stolzl-Thin, Century Gothic, Georgia;
         text-align: center;
         font-size: 10px;
-        height: 20px;
+        height: 6vh;
         position: absolute;
         margin-bottom: 0px;
         width: 100%;
     }
 
-    .menu{
+    .menu {
         clear: both;
         height: 70px;
         border-top-color: #e3bd8c;
         border-top-style: solid;
         border-top-width: 1px;
     }
-
 }
 
+/*@media screen and (max-width: 285px){*/
+/*.scroll-block{*/
+/*clear: both;*/
+/*height: 56vh;*/
+/*!*max-height: 200vw;*!*/
+/*overflow-y: scroll;*/
+/*text-align: center;*/
+/*}*/
+/*}*/
