--- a/UI/styles.css
+++ b/UI/styles.css
@@ -36,7 +36,7 @@
     height: 10vh;
     width: 50px;
     text-align: right;
-    background: url("UI/pictures/filters/filter.png");
+    background: url("./pictures/filters/filter.png");
     background-size: 50px;
 }
 
@@ -44,7 +44,7 @@
     float: right;
     width: 50px;
     text-align: right;
-    background: url("UI/pictures/filters/filterAnim.png");
+    background: url("./pictures/filters/filterAnim.png");
     background-size: 50px;
     text-align: right;
     color: #e3bd8c;
